# libraft

./: .gitignore  CMakeLists.txt  README.md
src/: raft_leader_election.cc  raft_leader_election.hh
src/protocol/: raft.pb.cc  raft.pb.h  raft.proto
test/: CMakeLists.txt  raft_leader_election_unittest.cc  test_libraft.cc
test/utils/: thread_safe_queue.hpp
